# SHSE

./: .env.example  .gitignore  .sync-conflict-20260422-175512-64KXWNX.gitignore  DesignDoc.md  Dockerfile.celery  Dockerfile.flask  Python.py  README.md  Sprints.md  TODO.md  base.py  base_config.ini  cli.py  config.ini  config.ini.example  deploy.sh  docker-compose.sync-conflict-20260422-170348-64KXWNX.yml  docker-compose.yml  feature_list.json  gen_urls.py  gui.py  init.sh  progress.md  pyproject.toml  pytest.ini  rebuild.sh  requirements-cpu-fallback.txt  requirements.sync-conflict-20260422-173847-64KXWNX.txt  requirements.txt  reset.sh  run.py  test_config_bad_option.ini  test_config_bad_section.ini  test_gen_urls.py  testsToAdd.txt
celery_worker/: __init__.py  app.py
config/: crawler.example.yaml  synonyms.yaml
crawl/: __init__.py  genUrls.py  gen_urls.py
crawler/: pyproject.toml
crawler/src/: crawlConfig.ini  start.py  urlGen.py
docs/: admin_ui.md  auth.md  calculator.md  config.md  database.md  datetime_cards.md  dictionary.md  docker.md  dorking.md  guide.md  installGuide.md  llm.md  mcp.md  nginx.md  nutch.md  opensearch.md  query_rewriter.md  search_filters.md  search_quality.md  search_ui.md  security_review.md  setup.md  systemd.md  tasks.md  testing.md  tls.md  translate.md  unit_converter.md  usageGuide.md  vm_layout.md  weather_cards.md
flask_app/: __init__.py  __init__.sync-conflict-20260422-173354-64KXWNX.py  config.py  config.sync-conflict-20260422-174214-64KXWNX.py  config_parser.py
mcp_server/: __init__.py  main.py
nginx/: nginx.conf
(+204 files in other folders)
