[tool.poetry]
name = "shse-crawler"
version = "0.1.0"
description = "this crawls your home lab and indexes for the search engine"
authors = ["eyeclept <eyeclept@pm.me>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Scrapy = "^2.11.2"
configparser = "^7.0.0"
ipaddress = "^1.0.23"
python-nmap = "^0.7.1"
pysocks = "^1.7.1"
pytest = "^8.3.2"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
