[tool.poetry]
name = "shse-crawler"
version = "0.1.0"
description = "this crawls your home lab and indexes for the search engine"
authors = ["eyeclept <eyeclept@pm.me>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
